# artget-mcp

./: .gitignore  ARTGEN_BLUEPRINT.md  README.md  palette.json  pyproject.toml
artgen/: __init__.py  __main__.py  canvas.py  iso.py  iso_actors.py  iso_world.py  palette.py  pixelize.py  preview.py
artgen/procgen/: __init__.py  __main__.py  autotile.py  buildings.py  nature.py  roads.py  terrain.py
docs/: iso_integration.md
mcp/: README.md  server.py
nngen/: README.md  RUNBOOK.md  bake_map.py  blockout.py  generate.py  palette_iso.json  prompts.md  requirements-gpu.txt  worker.py
nngen/bake/: meta.json
nngen/dataset/: prepare.py  sources.txt
nngen/dataset/train/hqiso/: !image_copy_15_p0_w640_0_0_1024x1024_sdxl.npz  !image_copy_15_p0_w640_0_281_1024x1024_sdxl.npz  image_copy_14_p0_w483_0_0.txt  (+32 more)
nngen/models/: hqiso_lora-step00000500.safetensors  hqiso_lora-step00001000.safetensors  hqiso_lora-step00001500.safetensors  hqiso_lora-step00002000.safetensors  hqiso_lora.safetensors
nngen/train/: dataset.toml  train_lora.ps1  train_lora.sh
plugin/: .mcp.json  README.md  requirements.txt
plugin/.claude-plugin/: plugin.json
references/: recraft-tileset-prompts.md
scripts/: build_plugin.py  demo_scene.py  iso_actors_demo.py  iso_homestead.py  iso_landscape.py  iso_living.py  iso_prototype.py  iso_world.py
skills/heroquarium-artgen/: SKILL.md
tests/: test_actors.py  test_autotile.py  test_build.py  test_buildings.py  test_canvas.py  test_iso.py  test_mcp.py  test_palette.py  test_roads.py  test_terrain.py
tools/: gen_assets.py  palette.json  pixelize.py
(+1 files in other folders)
